--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
         <h1>Electricity Business</h1>
     </header>
     <main>
-        
+        <form action="" method="get" id="form-coord-from-adress">
+            <label for="adress"></label>
+            <input type="text" id="adress">
+            <button type="submit">Get Coord</button>
+        </form>
+        <p id="output"></p>
+
     </main>
     <script type="module" src="./js/main.js"></script>
 </body>
