--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
         <p id="map-message"></p>
         <div id="map" style="height: 400px; width: 400px;"></div>
+
+        <ul id="liste-bornes"></ul>
     </main>
     <script type="module" src="./js/main.js"></script>
 </body>
