fix: main organisation & logs prints

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     </header>
     <main>
         <form action="" method="get" id="form-coord-from-adress">
-            <label for="adress"></label>
-            <input type="text" id="adress">
-            <button type="submit">Get Coord</button>
+            <label for="adress">Adresse :</label>
+            <input type="text" id="adress" style="width: 450px;">
+            <button type="submit">Voir les bornes</button>
         </form>
         <p id="output"></p>
 
