--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Electricity Business</title>
 
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
     crossorigin=""/>
@@ -19,15 +20,15 @@
     <main>
         <form action="" method="get" id="form-coord-from-adress">
             <label for="adress">Adresse :</label>
-            <input type="text" id="adress" style="width: 450px;">
+            <input type="text" id="adress">
             <button type="submit">Voir les bornes</button>
         </form>
-        <p id="output"></p>
 
+        <button id="change-bornes-vue">Basculer vue</button>
         <p id="map-message"></p>
-        <div id="map" style="height: 400px; width: 400px;"></div>
+        <div id="map"></div>
+        <ul id="liste-bornes" class="hidden"></ul>
 
-        <ul id="liste-bornes"></ul>
     </main>
     <script type="module" src="./js/main.js"></script>
 </body>
